syntax = "proto3";

package api;

service KvStore {
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message PutResponse {
  bool ok = 1;
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes value = 1;
  bool found = 2;
}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {
  bool deleted = 1;
}